fix: erreur de z-index sur les modal avec l'éditeur visuel

--- a/assets/template/admin/css/admin.css
+++ b/assets/template/admin/css/admin.css
@@ -36,7 +36,7 @@ img {
 }
 
 .modal {
-    z-index: 10010;
+    z-index: 1060;
 }
 
 .navigation .pagination {
